# sink-rotate

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  fmt.nix  nci.nix  package.nix  shell.nix
.github/workflows/: check.yml  release.yml
fixtures/: 48,_62_.json  _48_,62.json  one-sink-available.json
release/: default.nix
release/semantic-release-with-plugins/: package-lock.json  package.json
src/: main.rs  tests.rs
