[package]
name = "sink-rotate"
description = "Command that rotates the default PipeWire audio sink"
version = "2.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mightyiam/sink-rotate"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
